samples/_failures_safe/1761203754_a9c716_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_192d6985.c: In function ‘main’:
./samples/SAFE/__tmp_192d6985.c:171:21: error: expected declaration or statement at end of input
  171 |                     event = EVENT_ERROR;
      |                     ^~~~~
./samples/SAFE/__tmp_192d6985.c:171:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_192d6985.c:171:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_192d6985.c:171:21: error: expected declaration or statement at end of input
